<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>



	<groupId>com.training.example</groupId>
	<artifactId>JacocoExample</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>JacocoExample</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
	</properties>


	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>6.1.5.Final</version>
			<type>pom</type>
		</dependency>
	</dependencies>
	<build>
		<plugins>




			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<!-- Prepares the property pointing to the JaCoCo runtime agent -->
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<!-- Uncomment this in case you are using the maven surefire plugin -->
						<!-- <configuration> -->
						<!-- &lt;!&ndash; Sets the name of the property containing the settings 
							for JaCoCo -->
						<!-- runtime agent. &ndash;&gt; -->
						<!-- <propertyName>surefireArgLine</propertyName> -->
						<!-- </configuration> -->
					</execution>
					<!-- Ensures that the code coverage report for unit tests is created 
						after unit tests have been run. -->
					<execution>
						<id>generate-report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
				<configuration> <forkCount>3</forkCount> <reuseForks>true</reuseForks> <argLine>-Xmx1024m 
				-XX:MaxPermSize=256m</argLine> </configuration> </plugin> -->



			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
			</plugin>

		</plugins>


	</build>

	<profiles>
		<profile>
			<id>integration-tests</id>
		</profile>
		<profile>
			<id>no-tests</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
			</properties>
		</profile>
		<profile>
			<repositories>
				<repository>
					<id>release</id>
					<name>custom repo</name>
					<url>http://localhost:8081/#admin/repository/repository/maven-release</url>

				</repository>

			</repositories>
		</profile>
	</profiles>


</project>